--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,22 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.10.1
   firebase_auth: ^5.4.1
+  cloud_firestore: ^5.6.5
+  provider: ^6.1.2
+  intl: ^0.20.2
+  google_maps_flutter: ^2.12.0
+  geolocator: ^13.0.3
+  geocoding: ^3.0.0
+  image_picker: ^1.1.2
+  cloudinary_flutter: ^1.3.0
+  cloudinary_url_gen: ^1.7.0
+  cloudinary_public: ^0.23.1
+  crypto: ^3.0.6
+  foundation: ^0.0.5
+  http: ^1.3.0
+  photo_view: ^0.15.0
+  fl_chart: ^0.70.2
+  syncfusion_flutter_datepicker: ^29.1.35
 
 dev_dependencies:
   flutter_test:
