--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   photo_view: ^0.15.0
   fl_chart: ^0.70.2
   syncfusion_flutter_datepicker: ^29.1.35
+  weather: ^3.1.1
 
 dev_dependencies:
   flutter_test:
